[tool.poetry]
name = "simple_tdmpc2"
version = "0.1.0"
description = "Unofficial implementation of tdmpc2 with jax"
authors = ["Takanori Hashimoto <t.hashimoto@ieee.org>"]

[tool.poetry.dependencies]
python = ">=3.10, <3.11"
jaxlib = {version = "0.4.25+cuda11.cudnn86", source = "jax"}
torch = {version = "^2.1.1+cpu", source = "torch"}
dm-control = "^1.0.15"
gymnasium = "^0.29.1"
shimmy = {extras = ["dm-control"], version = "^1.3.0"}
tyro = "^0.6.0"
tensorboard = "^2.15.1"
wandb = "^0.16.5"
imageio = {extras = ["ffmpeg"], version = "^2.33.0"}
moviepy = "^1.0.3"
mediapy = "^1.2.0"
ffmpeg = "^1.4"
flax = "^0.8.2"

[[tool.poetry.source]]
name = "jax"
url = "https://storage.googleapis.com/jax-releases/jax_cuda_releases.html"
priority = "explicit"

[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"
